added navigation bar

--- a/Register.html
+++ b/Register.html
@@ -5,10 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="css/register.css">
     <title>Register Form</title>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+     <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header" >
+      <h1 class="navbar-brand" href="#" >School Management System</h1>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="./index.html">Home</a></li>
+      <li><a href="#">Admissions</a></li>
+      <li><a href="./Login.html">Login</a></li>
+      <li><a href="./Register.html">Register</a></li>
+      <li><a href="./contact_us.html">Contact</a></li>
+      <li><a href="./about.html">About Us</a></li>
+    </ul>
+  </div>
+</nav>
     <div class="container">
         <div class="d-flex justify-content-center h-100">
             <div class="card">
